--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ en/block-query
 en/block-subscribe
 en/client
 en/client-setup
-en/hd-wallets
+en/hd-wallet
 en/resources
 en/signature-generate
 en/signature-verify
